--- a/BE-yeo_gi_da/config/config.json
+++ b/BE-yeo_gi_da/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "api_connect_user",
-    "password": "vFDfsLJlhctSIy5yp",
+    "username": "api_conn_user",
+    "password": "q1w2e3r4",
     "database": "YeoGiDa_DEV_DB",
-    "host": "45.120.69.220",
+    "host": "139.150.83.29",
     "dialect": "mysql"
   },
   "test": {
-    "username": "api_connect_user",
-    "password": "vFDfsLJlhctSIy5yp",
+    "username": "api_conn_user",
+    "password": "q1w2e3r4",
     "database": "YeoGiDa_TEST_DB",
-    "host": "45.120.69.220",
+    "host": "139.150.83.29",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "9kLCdhGBGGbs09hHI",
+    "password": "WK86@bja^k~_",
     "database": "YeoGiDa_DB",
     "host": "127.0.0.1",
     "dialect": "mysql"
